fixing width of figcaption on mobile

--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -347,4 +347,7 @@ figcaption {
   .article-image img {
     width: 100%;
   }
+  figcaption {
+    width: 100%;
+  }
 }
